# ff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: diff.rs  find.rs  hash.rs  json.rs  main.rs  matcher.rs  output.rs  skip.rs  watch.rs
