[package]
name = "ff"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
jwalk = "0.8"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex = "1.10"
memmap2 = "0.9"
nix = { version = "0.29", features = ["event", "fs"] }
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
